objects/USL_Email2Case_ToEmails__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used to store the To emails that are used in Email2case for USL Service</description>
    <fields>
        <fullName>Proactive_Type__c</fullName>
        <label>Proactive Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Email100__c</fullName>
        <label>To Email100</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Email101__c</fullName>
        <label>To Email101</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Email102__c</fullName>
        <label>To Email102</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>USL Email2Case ToEmails</label>
</CustomObject>